--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "no-time-to-read"
 version = "0.1.0"
 edition = "2021"
+authors = ["Martin Contreras Uribe <martincontrerasur@gmail.com>"]
+license = "MIT OR Apache-2.0"
+description = "A tool to summarize text"
+homepage = "https://github.com/martin-conur/no-time-to-read"
+repository = "https://github.com/martin-conur/no-time-to-read"
+categories = ["command-line-utilities"]
+keywords = ["cli", "nlp", "ml", "bert", "candle", "summarization", "text"]
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -9,3 +17,41 @@ edition = "2021"
 assert_cmd = "2.0.14"
 clap = { version = "4.5.2", features = ["derive"] }
 predicates = "3.1.0"
+accelerate-src = { version = "0.3.2" }
+anyhow = { version = "1", features = ["backtrace"] }
+byteorder = "1.4.3"
+criterion = { version = "0.5.1", default-features=false }
+fancy-regex = "0.13.0"
+gemm = { version = "0.17.0", features = ["wasm-simd128-enable"] }
+hf-hub = "0.3.0"
+half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
+image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
+imageproc = { version = "0.23.0", default-features = false }
+intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
+libc = { version = "0.2.147" }
+log = "0.4"
+memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
+num_cpus = "1.15.0"
+num-traits = "0.2.15"
+parquet = { version = "50.0.0" }
+rand = "0.8.5"
+rand_distr = "0.4.3"
+rayon = "1.7.0"
+rusttype = { version = "0.9", default-features = false }
+safetensors = "0.4.1"
+serde = { version = "1.0.171", features = ["derive"] }
+serde_plain = "1.0.2"
+serde_json = "1.0.114"
+thiserror = "1"
+tokenizers = { version = "0.15.2", features = ["onig"] }
+tracing = "0.1.37"
+tracing-chrome = "0.7.1"
+tracing-subscriber = "0.3.7"
+wav = "1.0.0"
+yoke = { version = "0.7.2", features = ["derive"] }
+zip = { version = "0.6.6", default-features = false }
+metal = { version = "0.27.0", features = ["mps"]}
+candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
+candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
+candle-examples = "0.4.1"
+candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
